[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/interface/shop-item.gd" type="Script" id=1]
[ext_resource path="res://data/images/items/potion.png" type="Texture2D" id=2]
[ext_resource path="res://data/images/inventory/arrow.png" type="Texture2D" id=3]

[node name="ShopItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1041.0
offset_bottom = -982.0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 872.0
offset_bottom = 91.0
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 855.0
offset_bottom = 74.0
script = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
offset_right = 64.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
offset_left = 68.0
offset_top = 25.0
offset_right = 268.0
offset_bottom = 39.0
custom_minimum_size = Vector2( 200, 0 )
text = "Item Name"
valign = 1

[node name="Reduce" type="TextureButton" parent="MarginContainer/HBoxContainer"]
offset_left = 272.0
offset_right = 336.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Quantity" type="HSlider" parent="MarginContainer/HBoxContainer"]
offset_left = 340.0
offset_top = 24.0
offset_right = 440.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 100, 0 )
size_flags_vertical = 4
tick_count = 20
ticks_on_borders = true

[node name="QuantityLabel" type="Label" parent="MarginContainer/HBoxContainer"]
offset_left = 444.0
offset_top = 25.0
offset_right = 469.0
offset_bottom = 39.0
custom_minimum_size = Vector2( 25, 0 )
text = "0"

[node name="Increase" type="TextureButton" parent="MarginContainer/HBoxContainer"]
offset_left = 473.0
offset_right = 537.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Cost" type="Label" parent="MarginContainer/HBoxContainer"]
offset_left = 541.0
offset_top = 25.0
offset_right = 741.0
offset_bottom = 39.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_horizontal = 3
text = "5000Â£"
align = 2

[node name="Buy" type="Button" parent="MarginContainer/HBoxContainer"]
offset_left = 745.0
offset_top = 7.0
offset_right = 845.0
offset_bottom = 57.0
custom_minimum_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "Buy"

[connection signal="button_down" from="MarginContainer/HBoxContainer/Reduce" to="MarginContainer/HBoxContainer" method="_on_Reduce_button_down"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Reduce" to="MarginContainer/HBoxContainer" method="_on_Reduce_button_up"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/Quantity" to="MarginContainer/HBoxContainer" method="_on_Quantity_value_changed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/Increase" to="MarginContainer/HBoxContainer" method="_on_Increase_button_down"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Increase" to="MarginContainer/HBoxContainer" method="_on_Increase_button_up"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buy" to="MarginContainer/HBoxContainer" method="_on_Buy_pressed"]
